syntax = "proto3";

import "v1/ingester/labels.proto";

option go_package = "go.k6.io/k6/cloudapi/insights/proto/v1/ingester";

message RequestMetadata {
	string TraceID = 1;
	int64 StartTimeUnixNano = 2;
	int64 EndTimeUnixNano = 3;
	TestRunLabels TestRunLabels = 4;
	oneof ProtocolLabels {
		HTTPLabels HTTPLabels = 5;
	}
}
